--- a/.github/workflows/pkgtool.yml
+++ b/.github/workflows/pkgtool.yml
@@ -23,12 +23,10 @@ jobs:
       uses: actions/setup-dotnet@v1.9.0
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: cd PkgTool && dotnet restore
     - name: Publish for ${{ matrix.pubprofile }}
       run: cd PkgTool && dotnet publish -p:PublishProfile=${{ matrix.pubprofile }}
     - name: Test
-      run: cd LibOrbisPkgTests && dotnet test --no-build --verbosity normal
+      run: cd LibOrbisPkgTests && dotnet test --verbosity normal
     - name: Upload
       uses: actions/upload-artifact@v2
       with:
